# soundcatch

./: CMakeLists.txt  README
soundcatch/: decoder.cpp  decoder.h  encoder.cpp  encoder.h
test/: CMakeLists.txt  main.cpp
